---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 12/12/25
  Bugfixes:
    - Fixed incorrect tooltip for "Buy x" button in Quantum Bazaar when changing the slider.
---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 12/12/25
  Bugfixes:
    - Hotfix for servers running the game with no players online.
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 12/12/25
  Bugfixes:
    - Hotfix for servers running the game with no players online.
---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 12/12/25
  Changes:
    - Improved train item insertion logic.
    - Extended the tooltip for the locomotive trading button in the hex core GUI to make it clearer that the number of cargo wagons allowed per train trade is limited but upgradeable.
  Gui:
    - Reworked Quantum Bazaar interface.
  Balancing:
    - Increased the requirements for most "total item rank" quests.
    - Multiplied the loot value of dungeon chests on all planets by 10x, effectively upgrading all rolled loot items by one quality level.
  Bugfixes:
    - Fixed rare crash with output buffer unloading.
    - Fixed that train trading input inventory wasn't limited like output inventory.
    - Fixed train item insertion direction for double-ended trains making trades.
    - Fixed the gun turrets spawning incorrectly for the deathworld mod setting.
---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 11/12/25
  Minor Features:
    - Added item buffs for locomotives and cargo wagons.