@@ -420,7 +420,7 @@ function dungeons.init_maze(dungeon, start_pos)
     -- Attempt to generate the maze.
     dungeon.maze = hex_maze.new(allowed_positions)
     if not hex_maze.generate(dungeon.maze) then
-        lib.log_error("dungeons.init_maze: Failed to generate dungeon maze for surface " .. surface.name)
+        lib.log_error("dungeons.init_maze: Failed to generate dungeon maze")
         return false
     end
 
@@ -645,7 +645,7 @@ function dungeons.spawn_loot(dungeon, hex_pos, hex_grid_scale, hex_grid_rotation
     for i = 1, prot.chests_per_hex or 1 do
         local radius = math.max(5, math.random() ^ 0.5 * 10)
         local random_pos = lib.vector_add(lib.random_unit_vector(radius), hex_center)
-        local pos = surface.find_non_colliding_position("dungeon-chest", lib.rounded_position(random_pos, true), 2, 1, true)
+        local pos = dungeon.surface.find_non_colliding_position("dungeon-chest", lib.rounded_position(random_pos, true), 2, 1, true)
         if pos then
             local chest = dungeon.surface.create_entity {
                 name = "dungeon-chest",
