@@ -3,6 +3,11 @@ Version: 1.3.10
 Date: 12/12/25
   Bugfixes:
     - Fixed incorrect tooltip for "Buy x" button in Quantum Bazaar when changing the slider.
+    - Fixed that the command /regenerate-trades could put interplanetary trades on the wrong planets.
+    - Fixed that the claim tool would sometimes claim dungeon hexes.
+    - Fixed that the claim tool would sometimes ignore claiming the selected hexes.
+    - Fixed rare crash upon dungeon generation.
+    - Fixed that dungeon chests could be spawned inside of other entities.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.9
 Date: 12/12/25
